# py-to-exe

./: README.md  main.py  pyproject.toml  setup.py
